--- a/templates/index.html
+++ b/templates/index.html
@@ -91,6 +91,7 @@
     </div>
 
     <!-- Scripts -->
+    <script src="/static/js/notifications.js"></script>
     <script src="/static/js/auth.js"></script>
     <script src="/static/js/chunker.js"></script>
     <script src="/static/js/translator.js"></script>
